backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  # name: for specify that which application is this service for?
  name: backend-app-argocd
  namespace: dev-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: backend-app-argocd
